@@ -1,3 +1,9 @@
+2002-05-06  John Harper  <jsh@unfactored.org>
+
+	* sawfish/wm.jl: patch from Christophe Fergeau
+	<teuf@users.sourceforge.net> to call bindtextdomaincodeset
+	function. Modified to only call it if it exists
+
 2002-05-03  John Harper  <jsh@unfactored.org>
 
 	* sawfish/wm/gnome/integration.jl (gnome-use-capplet-changed):
