@@ -1,3 +1,9 @@
+2002-05-06  John Harper  <jsh@unfactored.org>
+
+	* i18n.jl: patch from Christophe Fergeau
+	<teuf@users.sourceforge.net> to call bindtextdomaincodeset
+	function. Modified to only call it if it exists
+
 2002-04-20  John Harper  <jsh@unfactored.org>
 
 	Removed user levels, button configuration:
