@@ -1,3 +1,9 @@
+2002-05-06  John Harper  <jsh@unfactored.org>
+
+	* sawmill-capplet.c: patch from Christophe Fergeau
+	<teuf@users.sourceforge.net> to call bindtextdomaincodeset
+	function
+
 2002-04-20  John Harper  <jsh@unfactored.org>
 
 	* desktop-entries/meta-properties.desktop,
